--- a/index.html
+++ b/index.html
@@ -6,11 +6,35 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Dongle&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body >
+    <nav class="navbar mb-0 navbarSettings navbar-expand-sm">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="">
+                <div class="d-flex navlogo">
+                    <img src="img/nobackground.png" alt="" class="rounded-pill" width="75px"> 
+                    <h1>Elixir</h1>
+                </div>
+            </a>
+            <div class="d-flex flex-grow-1 navlinks">
+                <ul class="navbar-nav bg-light me-aut">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><span class="linknames">Why Elixir</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><span class="linknames">Shop</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><span class="linknames">contact us</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="container ">
         <div class="row">
             <div class="col-sm-6 mx-auto my-auto" style="color: white;">
@@ -24,38 +48,54 @@
                 <img src="img/owl2.png" alt="" class="owl-img ">
             </div>
         </div>
-    </div>
-    <div class="container">
+    <div class="container ">
+        <h1>Our most selled items</h1>
         <div class="row">
             <div class="col-sm-3">
                 <div class="container item">
                     <h4 class="item-title">Potion of Swiftness</h4>
                     <img src="img/bluepotion.png" alt="" class="img-product mx-auto">
-                    <p class="item-desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam fugiat distinctio beatae id eveniet enim nam hic, maxime vel rem voluptates, in, quidem sint nostrum at quia? Quaerat, magni dolores!</p>
+                    <p class="item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. At temporibus nesciunt neque facilis dolore. Omnis possimus magni nobis modi maiores? Beatae perferendis voluptates eos explicabo porro repellat, facilis nisi dicta?<br> <a href="#" class="learn-more">Learn more&rarr;</a></p>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="container item">
                     <h4 class="item-title">Potion of health</h4>
                     <img src="img/redpotion.png" alt="" class="img-product mx-auto">
-                    <p class="item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. At temporibus nesciunt neque facilis dolore. Omnis possimus magni nobis modi maiores? Beatae perferendis voluptates eos explicabo porro repellat, facilis nisi dicta?</p>
+                    <p class="item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. At temporibus nesciunt neque facilis dolore. Omnis possimus magni nobis modi maiores? Beatae perferendis voluptates eos explicabo porro repellat, facilis nisi dicta?<br> <a href="#" class="learn-more">Learn more&rarr;</a></p>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="container item">
                     <h4 class="item-title">Potion of strength</h4>
                     <img src="img/redpotion.png" alt="" class="img-product mx-auto">
-                    <p class="item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. At temporibus nesciunt neque facilis dolore. Omnis possimus magni nobis modi maiores? Beatae perferendis voluptates eos explicabo porro repellat, facilis nisi dicta?</p>
+                    <p class="item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. At temporibus nesciunt neque facilis dolore. Omnis possimus magni nobis modi maiores? Beatae perferendis voluptates eos explicabo porro repellat, facilis nisi dicta?<br> <a href="#" class="learn-more">Learn more&rarr;</a></p>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="container item">
                     <h4 class="item-title">Potion of love</h4>
                     <img src="img/redpotion.png" alt="" class="img-product mx-auto">
-                    <p class="item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. At temporibus nesciunt neque facilis dolore. Omnis possimus magni nobis modi maiores? Beatae perferendis voluptates eos explicabo porro repellat, facilis nisi dicta?</p>
+                    <p class="item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. At temporibus nesciunt neque facilis dolore. Omnis possimus magni nobis modi maiores? Beatae perferendis voluptates eos explicabo porro repellat, facilis nisi dicta?<br> <a href="#" class="learn-more">Learn more&rarr;</a></p>
                 </div>
             </div>
         </div>
     </div>
+    <footer class="footer bg-black mt-5">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-4 Links-part">
+                    <h3 style="color: white">Links</h3>
+                    <ul class="links">
+                        <li><a class="ref" href="#">About us</a></li>
+                        <li><a class="ref" href="#">Shop</a></li>
+                        <li><a class="ref" href="#">Contact us</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    
+    
 </body>
 </html>
